# FBC-ChannelSpeedChange

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  Makefile  Makefile.am  README.md  autogen.sh  build.py  configure.ac
CONTROL/: control  postrm
docs/: api.md  architecture.md  install.md
po/: FBCChannelSpeedChange.pot  Makefile.am  de.po
src/usr/lib/enigma2/python/Plugins/Extensions/FBCChannelSpeedChange/: __init__.py  api.py  config.py  controller.py  diagnostic.py  fbc_pretune_pool.py  logger.py  osd_timing.py  plugin.py  predictor.py  resource_arbiter.py  settings_ui.py  setup.xml  setup_fbc_csc.xml  zap_interceptor.py
tests/: _enigma_stubs.py  run_all.py  test_controller_external.py  test_controller_rearm.py  test_csv_migration.py  test_external_api.py  test_logger.py  test_pool_state.py  test_predictor.py  test_resource_arbiter.py  test_sanity.py  test_scan.py  test_settings_ui.py  test_standby.py  test_zap_interceptor.py
tools/: bump_release_urls.py  compile_po.py  zap_stats.py
